--- a/wxtijiantong/html/cardList.html
+++ b/wxtijiantong/html/cardList.html
@@ -50,6 +50,7 @@
 		</div>
 		<script type="text/javascript" src="../js/jquery.min.js"></script>
 		<script type="text/javascript" src="../js/base.js"></script>
+		<script type="text/javascript" src="../js/cardList.js" ></script>
 	</body>
 
 </html>
