--- a/wxtijiantong/html/confirm.html
+++ b/wxtijiantong/html/confirm.html
@@ -56,12 +56,8 @@
 				</div>
 			</div>
 		</div>
-		
-		
-		
-		
-		
 		<script type="text/javascript" src="../js/jquery.min.js" ></script>
 		<script type="text/javascript" src="../js/base.js" ></script>
+		<script type="text/javascript" src="../js/confirm.js" ></script>
 	</body>
 </html>
