--- a/wxtijiantong/html/home.html
+++ b/wxtijiantong/html/home.html
@@ -183,18 +183,7 @@
 		<script type="text/javascript" src="../js/jquery.min.js"></script>
 		<script type="text/javascript" src="../js/amazeui.min.js"></script>
 		<script type="text/javascript" src="../js/base.js"></script>
-		<script>
-			//合作伙伴加载更多
-			var listH = $("#auto-box").children(".list-box").outerHeight() * 2 + "px";
-			$("window").resize(function() {
-				listH = $("#auto-box").children(".list-box").outerHeight() * 2 + "px";
-			})
-			$(".list-more").click(function() {
-				var box = $("#auto-box");
-				var boxH = box.css("height");
-				boxH == listH ? box.css("height", "auto") : box.css("height", listH);
-			})
-		</script>
+		<script type="text/javascript" src="../js/home.js" ></script>
 	</body>
 
 </html>
