--- a/wxtijiantong/html/myOrder.html
+++ b/wxtijiantong/html/myOrder.html
@@ -92,6 +92,7 @@
 		</div>
 		<script type="text/javascript" src="../js/jquery.min.js"></script>
 		<script type="text/javascript" src="../js/base.js"></script>
+		<script type="text/javascript" src="../js/myOrder.js" ></script>
 	</body>
 
 </html>
