--- a/wxtijiantong/html/personalCenter.html
+++ b/wxtijiantong/html/personalCenter.html
@@ -71,6 +71,7 @@
 		</div>
 		<script type="text/javascript" src="../js/jquery.min.js"></script>
 		<script type="text/javascript" src="../js/base.js"></script>
+		<script type="text/javascript" src="../js/personalCenter.js" ></script>
 	</body>
 
 </html>
