--- a/wxtijiantong/html/shoppingCart.html
+++ b/wxtijiantong/html/shoppingCart.html
@@ -55,6 +55,7 @@
 		</div>
 		<script type="text/javascript" src="../js/jquery.min.js"></script>
 		<script type="text/javascript" src="../js/base.js"></script>
+		<script type="text/javascript" src="../js/shoppingCart.js" ></script>
 	</body>
 
 </html>
