--- a/wxtijiantong/html/home.html
+++ b/wxtijiantong/html/home.html
@@ -29,15 +29,15 @@
 			</div>
 			<!--圆形导航栏-->
 			<div class="circle-nav">
-				<a href="#" class="fl">
+				<a href="setList.html" class="fl">
 					<img src="../img/mypic/6.jpg" />
 					<p>体检套餐</p>
 				</a>
-				<a href="#" class="fl">
+				<a href="cardList.html" class="fl">
 					<img src="../img/mypic/6.jpg" />
 					<p>体检卡</p>
 				</a>
-				<a href="#" class="fl">
+				<a href="shopList.html" class="fl">
 					<img src="../img/mypic/6.jpg" />
 					<p>体检机构</p>
 				</a>
