--- a/wxtijiantong/html/home.html
+++ b/wxtijiantong/html/home.html
@@ -171,11 +171,11 @@
 				<i class="iconfont">&#xe719;</i>
 				<p>预约体检</p>
 			</a>
-			<a href="shoppingCart.html">
+			<a href="shoppingCart.html" class="fl">
 				<i class="iconfont">&#xe6af;</i>
 				<p>购物车</p>
 			</a>
-			<a href="personalCenter.html" class="fr">
+			<a href="personalCenter.html" class="fl">
 				<i class="iconfont">&#xe78b;</i>
 				<p>个人中心</p>
 			</a>
