--- a/wxtijiantong/html/personalCenter.html
+++ b/wxtijiantong/html/personalCenter.html
@@ -15,9 +15,9 @@
 				<a href="login.html">快捷登录</a>
 			</div>
 			<div class="order-section">
-				<a href="#" class="fl"><i class="iconfont">&#xe77d;</i>待支付</a>
-				<a href="#" class="fl"><i class="iconfont">&#xe791;</i>待收货</a>
-				<a href="#" class="fl"><i class="iconfont">&#xe791;</i>全部订单</a>
+				<a href="myOrder.html" class="fl"><i class="iconfont">&#xe77d;</i>待支付</a>
+				<a href="myOrder.html" class="fl"><i class="iconfont">&#xe791;</i>待收货</a>
+				<a href="myOrder.html" class="fl"><i class="iconfont">&#xe791;</i>全部订单</a>
 				<div class="clearfix"></div>
 			</div>
 			<div class="main-section">
