--- a/wxtijiantong/html/setList.html
+++ b/wxtijiantong/html/setList.html
@@ -11,7 +11,10 @@
 
 	<body>
 		<div class="container">
-			<button class="top-section" data-am-offcanvas="{target: '#filter-nav'}"></button>
+			<div class="top-section" data-am-offcanvas="{target: '#filter-nav'}">
+				<div><i class="iconfont">&#xe65c;</i></div>
+				<span>筛选</span>
+			</div>
 			<!--侧边筛选栏-->
 			<div id="filter-nav" class="am-offcanvas">
 				<div class="am-offcanvas-bar">
@@ -43,11 +46,53 @@
 				</div>
 			</div>
 			<div class="main-wrap">
-				<div class="main-list"></div>
+				<div class="main-list">
+					<ul>
+						<li>
+							<a class="list-box" href="setDetail.html">
+								<div class="box-l">
+									<h6>都市超值白领套餐</h6>
+									<p>重点项目：血常规，尿常规，啦啦啦啦血常规，尿常规，啦啦啦啦血常规，尿常规，啦啦啦啦血常规，尿常规，啦啦啦啦血常规，尿常规，啦啦啦啦血常规，尿常规，啦啦啦啦血常规，尿常规，啦啦啦啦</p>
+								</div>
+								<div class="box-r">
+									<h6>￥280</h6>
+									<p><span>门市价</span><del>￥5209</del></p>
+								</div>
+								<div class="box-add"><i class="iconfont">&#xe72d;</i>宝山区</div>
+							</a>
+						</li>
+						<li>
+							<a class="list-box" href="setDetail.html">
+								<div class="box-l">
+									<h6>都市超值白领套餐</h6>
+									<p>重点项目：血常规，尿常规，啦啦啦啦血常规，尿常规，啦啦啦啦血常规，尿常规，啦啦啦啦血常规，尿常规，啦啦啦啦血常规，尿常规，啦啦啦啦血常规，尿常规，啦啦啦啦血常规，尿常规，啦啦啦啦</p>
+								</div>
+								<div class="box-r">
+									<h6>￥280</h6>
+									<p><span>门市价</span><del>￥5209</del></p>
+								</div>
+								<div class="box-add"><i class="iconfont">&#xe72d;</i>宝山区</div>
+							</a>
+						</li>
+						<li>
+							<a class="list-box" href="setDetail.html">
+								<div class="box-l">
+									<h6>都市超值白领套餐</h6>
+									<p>重点项目：血常规，尿常规，啦啦啦啦血常规，尿常规，啦啦啦啦血常规，尿常规，啦啦啦啦血常规，尿常规，啦啦啦啦血常规，尿常规，啦啦啦啦血常规，尿常规，啦啦啦啦血常规，尿常规，啦啦啦啦</p>
+								</div>
+								<div class="box-r">
+									<h6>￥280</h6>
+									<p><span>门市价</span><del>￥5209</del></p>
+								</div>
+								<div class="box-add"><i class="iconfont">&#xe72d;</i>宝山区</div>
+							</a>
+						</li>
+					</ul>
+				</div>
 			</div>
 		</div>
 		<!--全局导航条-->
-		<div id="all-nav">
+		<div id="all-nav" class="clearfix">
 			<a href="home.html" class="fl">
 				<i class="iconfont">&#xe676;</i>
 				<p>首页</p>
@@ -56,11 +101,11 @@
 				<i class="iconfont">&#xe719;</i>
 				<p>预约体检</p>
 			</a>
-			<a href="shoppingCart.html">
+			<a href="shoppingCart.html" class="fl">
 				<i class="iconfont">&#xe6af;</i>
 				<p>购物车</p>
 			</a>
-			<a href="personalCenter.html" class="fr">
+			<a href="personalCenter.html" class="fl">
 				<i class="iconfont">&#xe78b;</i>
 				<p>个人中心</p>
 			</a>
