--- a/wxtijiantong/html/shopDetail.html
+++ b/wxtijiantong/html/shopDetail.html
@@ -45,7 +45,7 @@
 							<a class="set-info" href="setDetail.html">
 									<div class="box-l">
 										<h6>都市超值白领套餐</h6>
-										<p>重点项目：血常规，尿常规尿常规尿常规尿常规尿常规尿常规</p>
+										<p>重点项目：血常规，尿常规尿常规尿常规尿常规尿常规尿常规规尿常规规尿常规规尿常规规尿常规规尿常规规尿常规规尿常规规尿常规规尿常规规尿常规规尿常规规尿常规规尿常规规尿常规规尿常规规尿常规规尿常规规尿常规规尿常规规尿常规规尿常规规尿常规规尿常规规尿常规规尿常规规尿常规规尿常规</p>
 									</div>
 									<div class="box-r">
 										<h6>￥280</h6>
