--- a/wxtijiantong/html/shopList.html
+++ b/wxtijiantong/html/shopList.html
@@ -11,8 +11,8 @@
 	<body>
 		<div class="container">
 			<div class="top-section">
-				<span>筛选</span>
 				<div><i class="iconfont">&#xe65c;</i></div>
+				<span>筛选</span>
 			</div>
 			<div class="main-box">
 				<ul class="main-list">
@@ -36,7 +36,7 @@
 								</span>
 								</div>
 								<div class="more-btn fl">
-									<a href="detail.html?type=1">预约</a>
+									<a href="shopDetail.html">预约</a>
 								</div>
 							</li>
 							<li class="list-more-box clearfix">
@@ -51,7 +51,7 @@
 								</span>
 								</div>
 								<div class="more-btn fl">
-									<a href="detail.html?type=1">预约</a>
+									<a href="shopDetail.html">预约</a>
 								</div>
 							</li>
 							<li class="list-more-box clearfix">
@@ -66,7 +66,7 @@
 								</span>
 								</div>
 								<div class="more-btn fl">
-									<a href="detail.html?type=1">预约</a>
+									<a href="shopDetail.html">预约</a>
 								</div>
 							</li>
 						</ul>
@@ -92,7 +92,7 @@
 								</span>
 								</div>
 								<div class="more-btn fl">
-									<a href="detail.html?type=1">预约</a>
+									<a href="shopDetail.html">预约</a>
 								</div>
 							</li>
 						</ul>
