--- a/wxtijiantong/html/confirm.html
+++ b/wxtijiantong/html/confirm.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<div class="container">
-			<a href="#" class="top-info">
+			<a href="addressManage.html" class="top-info">
 				<p class="text-over">配送至：上海市徐汇区双峰路111号2032室</p>
 				<i class="iconfont">&#xe6a3;</i>
 				<div class="clearfix"></div>
