--- a/wxtijiantong/html/personalCenter.html
+++ b/wxtijiantong/html/personalCenter.html
@@ -21,9 +21,9 @@
 				<div class="clearfix"></div>
 			</div>
 			<div class="main-section">
-				<a href="#">
+				<a href="addressManage.html">
 					<i class="iconfont">&#xe676;</i>
-					常用地址
+					地址管理
 					<i class="iconfont fr">&#xe6a3;</i>
 				</a>
 				<a href="#">
