--- a/wxtijiantong/html/shopList.html
+++ b/wxtijiantong/html/shopList.html
@@ -17,12 +17,12 @@
 			<div class="main-box">
 				<ul class="main-list">
 					<li class="list-box">
-						<div class="list-top">
+						<a href="shopDetail.html" class="list-top">
 							<img src="../img/mypic/9.jpg" />
 							<h6>上海市龙华医院</h6>
 							<p class="text-over">地址：上海市徐汇区宛平南路宛平南路宛平南路宛平南路</p>
 							<p class="text-over">交通：地铁7号线（龙华中路）</p>
-						</div>
+						</a>
 						<ul class="list-more">
 							<li class="list-more-box clearfix">
 								<div class="more-set fl">
@@ -36,7 +36,7 @@
 								</span>
 								</div>
 								<div class="more-btn fl">
-									<a href="shopDetail.html">预约</a>
+									<a href="setDetail.html">预约</a>
 								</div>
 							</li>
 							<li class="list-more-box clearfix">
@@ -51,7 +51,7 @@
 								</span>
 								</div>
 								<div class="more-btn fl">
-									<a href="shopDetail.html">预约</a>
+									<a href="setDetail.html">预约</a>
 								</div>
 							</li>
 							<li class="list-more-box clearfix">
@@ -66,19 +66,19 @@
 								</span>
 								</div>
 								<div class="more-btn fl">
-									<a href="shopDetail.html">预约</a>
+									<a href="setDetail.html">预约</a>
 								</div>
 							</li>
 						</ul>
 						<div class="btn-all">展开全部<i class="iconfont">&#xe79b;</i></div>
 					</li>
 					<li class="list-box">
-						<div class="list-top">
+						<a href="shopDetail.html" class="list-top">
 							<img src="../img/mypic/9.jpg" />
 							<h6>上海市龙华医院</h6>
 							<p class="text-over">地址：上海市徐汇区宛平南路宛平南路宛平南路宛平南路</p>
 							<p class="text-over">交通：地铁7号线（龙华中路）</p>
-						</div>
+						</a>
 						<ul class="list-more">
 							<li class="list-more-box clearfix">
 								<div class="more-set fl">
@@ -92,7 +92,7 @@
 								</span>
 								</div>
 								<div class="more-btn fl">
-									<a href="shopDetail.html">预约</a>
+									<a href="setDetail.html">预约</a>
 								</div>
 							</li>
 						</ul>
